--- a/index.html
+++ b/index.html
@@ -9,11 +9,35 @@
   </head>
   <body>
 
-    <div data-sticky-container>
+    <!-- <div data-sticky-container>
       <div class="top-bar" data-sticky data-options="marginTop:0;" style="width:100%">
         <div class="top-bar-title">
           <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
             <button class="menu-icon dark" type="button" data-toggle></button>
+          </span>
+          <a href="#top">
+            <strong class="top-bar-title-logo">Wilson Wyoming Bed and Breakfast</strong>
+          </a>
+        </div>
+        <div id="responsive-menu">
+          <div class="top-bar-right">
+            <ul class="vertical medium-horizontal dropdown menu" data-dropdown-menu>
+              <li><a href="#location">Location</a></li>
+              <li><a href="#food">Food</a></li>
+              <li><a href="#gallery">Gallery</a></li>
+              <li><a href="#contact">Contact</a></li>
+              <li><a href="tel:012-345-6789">012-345-6789</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div> -->
+
+    <div data-sticky-container>
+      <div class="top-bar" data-sticky data-options="marginTop:0;" style="width:100%">
+        <div class="top-bar-title">
+          <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
+            <button class="menu-icon dark" type="button" data-toggle="responsive-menu"></button>
           </span>
           <a href="#top">
             <strong class="top-bar-title-logo">Wilson Wyoming Bed and Breakfast</strong>
@@ -99,19 +123,19 @@
               <p class="column small-12">Click a photo to view it larger.</p>
             </div>
             <div class="row">
-              <a data-open="Modal1" class="thumbnail column"><img src="img/availability.jpg" alt="cozy blankets"></a>
-              <a data-open="Modal2" class="thumbnail column"><img src="img/blueberries.jpg" alt="yum blueberries"></a>
-              <a data-open="Modal3" class="thumbnail column"><img src="img/cabin.jpg" alt="happy bb cabin"></a>
+              <a data-open="Modal1" class="small-6 medium-4 column"><img src="img/availability.jpg" alt="cozy blankets"></a>
+              <a data-open="Modal2" class="small-6 medium-4 column"><img src="img/blueberries.jpg" alt="yum blueberries"></a>
+              <a data-open="Modal3" class="small-12 medium-4 column"><img src="img/cabin.jpg" alt="happy bb cabin"></a>
             </div>
             <div class="row">
-              <a data-open="Modal4" class="thumbnail column"><img src="img/contact.jpg" alt="what a nice room"></a>
-              <a data-open="Modal5" class="thumbnail column"><img src="img/food.jpg" alt="yum food"></a>
-              <a data-open="Modal6" class="thumbnail column"><img src="img/hike.jpg" alt="surrounded by mountains"></a>
+              <a data-open="Modal4" class="small-6 medium-4 column"><img src="img/contact.jpg" alt="what a nice room"></a>
+              <a data-open="Modal5" class="small-6 medium-4 column"><img src="img/food.jpg" alt="yum food"></a>
+              <a data-open="Modal6" class="small-12 medium-4 column"><img src="img/hike.jpg" alt="surrounded by mountains"></a>
             </div>
             <div class="row">
-              <a data-open="Modal7" class="thumbnail column"><img src="img/lake-photo.jpg" alt="right on the lake"></a>
-              <a data-open="Modal8" class="thumbnail column"><img src="img/location-1.jpg" alt="surrounded by the mountains"></a>
-              <a data-open="Modal9" class="thumbnail column"><img src="img/winter.jpg" alt="winter snowy mountains"></a>
+              <a data-open="Modal7" class="small-6 medium-4 column"><img src="img/lake-photo.jpg" alt="right on the lake"></a>
+              <a data-open="Modal8" class="small-6 medium-4 column"><img src="img/location-1.jpg" alt="surrounded by the mountains"></a>
+              <a data-open="Modal9" class="small-12 medium-4 column"><img src="img/winter.jpg" alt="winter snowy mountains"></a>
             </div>
             <!--Modal Windows-->
             <div class="reveal small" id="Modal1" data-reveal>
@@ -119,7 +143,7 @@
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
               </button>
-              <div class="row align-spaced">
+              <div class="row align-spaced bc-back-next">
                 <a data-open="Modal9">&#60; back</a>
                 <a data-open="Modal2">next &#62;</a>
               </div>
@@ -129,7 +153,7 @@
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
               </button>
-              <div class="row align-spaced">
+              <div class="row align-spaced bc-back-next">
                 <a data-open="Modal1">&#60; back</a>
                 <a data-open="Modal3">next &#62;</a>
               </div>
@@ -139,7 +163,7 @@
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
               </button>
-              <div class="row align-spaced">
+              <div class="row align-spaced bc-back-next">
                 <a data-open="Modal2">&#60; back</a>
                 <a data-open="Modal4">next &#62;</a>
               </div>
@@ -149,7 +173,7 @@
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
               </button>
-              <div class="row align-spaced">
+              <div class="row align-spaced bc-back-next">
                 <a data-open="Modal3">&#60; back</a>
                 <a data-open="Modal5">next &#62;</a>
               </div>
@@ -159,7 +183,7 @@
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
               </button>
-              <div class="row align-spaced">
+              <div class="row align-spaced bc-back-next">
                 <a data-open="Modal4">&#60; back</a>
                 <a data-open="Modal6">next &#62;</a>
               </div>
@@ -169,7 +193,7 @@
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
               </button>
-              <div class="row align-spaced">
+              <div class="row align-spaced bc-back-next">
                 <a data-open="Modal5">&#60; back</a>
                 <a data-open="Modal7">next &#62;</a>
               </div>
@@ -179,7 +203,7 @@
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
               </button>
-              <div class="row align-spaced">
+              <div class="row align-spaced bc-back-next">
                 <a data-open="Modal6">&#60; back</a>
                 <a data-open="Modal8">next &#62;</a>
               </div>
@@ -189,7 +213,7 @@
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
               </button>
-              <div class="row align-spaced">
+              <div class="row align-spaced bc-back-next">
                 <a data-open="Modal7">&#60; back</a>
                 <a data-open="Modal9">next &#62;</a>
               </div>
@@ -199,7 +223,7 @@
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
               </button>
-              <div class="row align-spaced">
+              <div class="row align-spaced bc-back-next">
                 <a data-open="Modal8">&#60; back</a>
                 <a data-open="Modal1">next &#62;</a>
               </div>
