optimized foundation.. only included necessary partials

--- a/index.html
+++ b/index.html
@@ -9,30 +9,6 @@
   </head>
   <body>
 
-    <!-- <div data-sticky-container>
-      <div class="top-bar" data-sticky data-options="marginTop:0;" style="width:100%">
-        <div class="top-bar-title">
-          <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
-            <button class="menu-icon dark" type="button" data-toggle></button>
-          </span>
-          <a href="#top">
-            <strong class="top-bar-title-logo">Wilson Wyoming Bed and Breakfast</strong>
-          </a>
-        </div>
-        <div id="responsive-menu">
-          <div class="top-bar-right">
-            <ul class="vertical medium-horizontal dropdown menu" data-dropdown-menu>
-              <li><a href="#location">Location</a></li>
-              <li><a href="#food">Food</a></li>
-              <li><a href="#gallery">Gallery</a></li>
-              <li><a href="#contact">Contact</a></li>
-              <li><a href="tel:012-345-6789">012-345-6789</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
     <div data-sticky-container>
       <div class="top-bar" data-sticky data-options="marginTop:0;" style="width:100%">
         <div class="top-bar-title">
@@ -40,7 +16,7 @@
             <button class="menu-icon dark" type="button" data-toggle="responsive-menu"></button>
           </span>
           <a href="#top">
-            <strong class="top-bar-title-logo">Wilson Wyoming Bed and Breakfast</strong>
+            <strong class="top-bar-title-logo">Wilson WY B&B</strong>
           </a>
         </div>
         <div id="responsive-menu">
@@ -138,7 +114,7 @@
               <a data-open="Modal9" class="small-12 medium-4 column"><img src="img/winter.jpg" alt="winter snowy mountains"></a>
             </div>
             <!--Modal Windows-->
-            <div class="reveal small" id="Modal1" data-reveal>
+            <div class="reveal" id="Modal1" data-reveal>
               <img src="img/availability.jpg" alt="cozy blankets">
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
@@ -148,7 +124,7 @@
                 <a data-open="Modal2">next &#62;</a>
               </div>
             </div>
-            <div class="reveal small" id="Modal2" data-reveal>
+            <div class="reveal" id="Modal2" data-reveal>
               <img src="img/blueberries.jpg" alt="yum blueberries">
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
@@ -158,7 +134,7 @@
                 <a data-open="Modal3">next &#62;</a>
               </div>
             </div>
-            <div class="reveal small" id="Modal3" data-reveal>
+            <div class="reveal" id="Modal3" data-reveal>
               <img src="img/cabin.jpg" alt="happy bb cabin">
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
@@ -168,7 +144,7 @@
                 <a data-open="Modal4">next &#62;</a>
               </div>
             </div>
-            <div class="reveal small" id="Modal4" data-reveal>
+            <div class="reveal" id="Modal4" data-reveal>
               <img src="img/contact.jpg" alt="what a nice room">
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
@@ -178,7 +154,7 @@
                 <a data-open="Modal5">next &#62;</a>
               </div>
             </div>
-            <div class="reveal small" id="Modal5" data-reveal>
+            <div class="reveal" id="Modal5" data-reveal>
               <img src="img/food.jpg" alt="yum food">
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
@@ -188,7 +164,7 @@
                 <a data-open="Modal6">next &#62;</a>
               </div>
             </div>
-            <div class="reveal small" id="Modal6" data-reveal>
+            <div class="reveal" id="Modal6" data-reveal>
               <img src="img/hike.jpg" alt="surrounded by mountains">
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
@@ -198,7 +174,7 @@
                 <a data-open="Modal7">next &#62;</a>
               </div>
             </div>
-            <div class="reveal small" id="Modal7" data-reveal>
+            <div class="reveal" id="Modal7" data-reveal>
               <img src="img/lake-photo.jpg" alt="right on the lake">
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
@@ -208,7 +184,7 @@
                 <a data-open="Modal8">next &#62;</a>
               </div>
             </div>
-            <div class="reveal small" id="Modal8" data-reveal>
+            <div class="reveal" id="Modal8" data-reveal>
               <img src="img/location-1.jpg" alt="surrounded by the mountains">
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
@@ -218,7 +194,7 @@
                 <a data-open="Modal9">next &#62;</a>
               </div>
             </div>
-            <div class="reveal small" id="Modal9" data-reveal>
+            <div class="reveal" id="Modal9" data-reveal>
               <img src="img/winter.jpg" alt="winter snowy mountains">
               <button class="close-button" data-close aria-label="Close modal" type="button">
                 <span aria-hidden="true">&times;</span>
